--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-scroll": "^1.7.16",
-    "react-swipeable": "^5.5.1"
+    "react-swipeable": "^5.5.1",
+    "uuid": "^7.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
