--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "shajara",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://shajara.now.sh/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -13,8 +14,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-scroll": "^1.7.16",
-    "react-swipeable": "^5.5.1",
-    "uuid": "^7.0.3"
+    "react-swipeable": "^5.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
